--- a/Meu site/css/form.css
+++ b/Meu site/css/form.css
@@ -1,4 +1,4 @@
-input[type=text]{   
+input[type=text], [type=email]{   
     border-radius:4px;
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
@@ -36,4 +36,48 @@ input[type=submit]{
 
 legend{
     font-style:italic; 
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
+    input[type=text], [type=email]{   
+        width:95%;
+    }
+     
+    textarea{
+        width:95%;
+    }
+
+    .centraliza{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+    }
+
+    blockquote{
+        width: 80%;
+        height: 100%;
+    }
+
+    .imagem1{
+        width: 90%;
+        height: 90%;
+    }
+ 
+    .imagem2{
+        width: 90%;
+        height: 90%;
+    }
+
+    .tamanho-conteudo{
+        width: 80%;
+    }
+
+    .conteudo{
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
