--- a/Meu site/css/site5.css
+++ b/Meu site/css/site5.css
@@ -49,7 +49,6 @@ h2{
     font-family: "Arial", sans-serif;
     font-size: 25px;
     font-weight: bold;
-    width: 720px;
     margin: auto;
 }
 
@@ -66,7 +65,7 @@ blockquote{
     border: 10px solid #C2CCC4;
 }
 
-div {
+.centraliza{
     width: 720px;
     margin: auto;
     text-align: center;
@@ -97,7 +96,7 @@ ul{
 .grid-container{
     display:grid;
     grid-template-areas: "header" "nv" "main" "footer";
-    grid-template-rows: 95px 65px 5500px 20px;
+    grid-template-rows: 5% 5% 88% 2%;
     grid-template-columns: 100%;
 }
 
@@ -151,6 +150,65 @@ th{
 }
 
 article{
-    width: 720px;
+    width: 90%;
     margin:auto;
+}
+
+.posicao-imagem{
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.imagem1{
+    width:710px;
+    height:500px;
+}
+
+.imagem2{
+    width:710px;
+    height:400px;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+    input[type=text], [type=email]{   
+        width:95%;
+    }
+     
+    textarea{
+        width:95%;
+    }
+
+    .centraliza{
+        width: 80%;
+        margin: auto;
+        text-align: center;
+    }
+
+    blockquote{
+        width: 80%;
+        height: 100%;
+    }
+
+    .imagem1{
+        width: 90%;
+        height: 90%;
+    }
+ 
+    .imagem2{
+        width: 90%;
+        height: 90%;
+    }
+
+    .tamanho-conteudo{
+        width: 80%;
+    }
+
+    .conteudo{
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
