--- a/Meu site/7-2/style.css
+++ b/Meu site/7-2/style.css
@@ -15,3 +15,13 @@ body{
 textarea {
     border: 2px solid rgb(251, 255, 0); 
 }
+
+input[type=reset]{ 
+    background-color: rgb(216, 162, 46); /* Green */
+    border: solid;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+}
