--- a/Meu site/7-4/style.css
+++ b/Meu site/7-4/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Times New Roman";
-    background: linear-gradient(#A9A9A9,#DCDCDC);
+    background: linear-gradient(#A9A9AA);
     margin:0px;
     margin-top: 0px;
     font-size: 120%;
@@ -11,7 +11,7 @@ h1{
     text-align: center;
     font-size: 50px;
     padding: 25px 0px;
-    background-color: #1f0058;
+    background-color: #6846a7;
     color: white;
     font-family: "Hepta Slab";
     margin-top: 0px;
@@ -24,7 +24,7 @@ p{
 }
 
 input[type=button]{ 
-    background-color: #4CAF50; /* Green */
+    background-color: #6846a7;
     border: solid;
     color: white;
     padding: 15px 32px;
