--- a/Meu site/7-3/style.css
+++ b/Meu site/7-3/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Times New Roman";
-    background: linear-gradient(#A9A9A9,#DCDCDC);
+    background: #556B2F;
     margin:0px;
     margin-top: 0px;
     font-size: 120%;
