--- a/Meu site/7-4/style.css
+++ b/Meu site/7-4/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: "Times New Roman";
-    background: linear-gradient(#A9A9AA);
+    background: #A9A9AA;
     margin:0px;
     margin-top: 0px;
     font-size: 120%;
