--- a/Meu site/7-2/style.css
+++ b/Meu site/7-2/style.css
@@ -17,7 +17,7 @@ textarea {
 }
 
 input[type=reset]{ 
-    background-color: rgb(216, 162, 46); /* Green */
+    background-color: rgb(216, 162, 46);
     border: solid;
     color: black;
     padding: 15px 32px;
