--- a/Meu site/7-3/style.css
+++ b/Meu site/7-3/style.css
@@ -24,7 +24,7 @@ p{
 }
 
 button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
