--- a/Meu site/7-5/style.css
+++ b/Meu site/7-5/style.css
@@ -24,7 +24,7 @@ p{
 }
 
 input{ 
-    background-color: #00CED1; /* Green */
+    background-color: #00CED1;
     border: solid;
     color: white;
     padding: 15px 32px;
