--- a/Meu site/7-8/style.css
+++ b/Meu site/7-8/style.css
@@ -1,1 +1,125 @@
+body{
+    height: 1200px;
+    text-align: center;
+    background: burlywood;
+}
 
+p{
+    font-size: 1em;
+}
+
+/* MENU 1 */
+
+.dropbtn {
+    background-color: #A52A2A;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+  
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #A52A2A;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropdown a:hover {background-color: #5F9EA0;}
+  
+.show {display: block;}
+
+/* MENU 2 */
+
+#navbar {
+    background-color: #A52A2A; 
+    position: fixed; 
+    top: -50px; 
+    width: 100%; 
+    transition: top 0.3s; 
+}
+  
+  #navbar a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+  }
+  
+  #navbar a:hover {
+    background-color: #5F9EA0;
+    color: black;
+  }
+
+/* MENU 3 */
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    background-color: #5F9EA0; 
+    overflow-x: hidden;
+    transition: 0.5s; 
+}
+  
+.overlay-content {
+    position: relative;
+    top: 25%; 
+    width: 100%; 
+    text-align: center; 
+    margin-top: 30px; 
+}
+  
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: black;
+    display: block; 
+    transition: 0.3s;
+}
+  
+.overlay a:hover, .overlay a:focus {
+    color: #A52A2A;
+}
+  
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+  
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+}
